--- a/CFN/RDS_2.yaml
+++ b/CFN/RDS_2.yaml
@@ -59,7 +59,7 @@ Resources:
             default: "RDS.2"
           GetTagsLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetTagsbyResource-test"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetTagsbyResource"
           GetInventoryLambda:
             type: String
             default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetAccountInventory"
