--- a/CFN/GetAccountInventoryLambda.yaml
+++ b/CFN/GetAccountInventoryLambda.yaml
@@ -98,7 +98,11 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupClass: STANDARD
-      LogGroupName: !Sub /aws/lambda/FTA-GetAccountInventory-${AWS::Region}
+      # LogGroupName: !Sub /aws/lambda/FTA-GetAccountInventory-${AWS::Region}
+      LogGroupName: !Join
+        - "-"
+        - - "/aws/lambda/FTA-GetAccountInventory"
+          - !Select [-1, !Split ["-", !Ref "AWS::StackId"]]  # Get the last part of the stack ID
       RetentionInDays: 30
 
   # Define the IAM role for the Lambda function
