--- a/CFN/GetTagsLambda.yaml
+++ b/CFN/GetTagsLambda.yaml
@@ -168,7 +168,11 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupClass: STANDARD
-      LogGroupName: !Sub /aws/lambda/FTA-GetTagsbyResource-${AWS::Region}
+      # LogGroupName: !Sub /aws/lambda/FTA-GetTagsbyResources-${AWS::Region}
+      LogGroupName: !Join
+        - "-"
+        - - "/aws/lambda/FTA-GetTagsbyResource"
+          - !Select [-1, !Split ["-", !Ref "AWS::StackId"]]  # Get the last part of the stack ID
       RetentionInDays: 30
 
   LambdaExecutionRole:
