--- a/CFN/GetTagsLambda.yaml
+++ b/CFN/GetTagsLambda.yaml
@@ -159,20 +159,16 @@ Resources:
                 return "NotExcluded"
 
       LoggingConfig:
-        LogGroup: !Ref LambdaLogGroup
+        LogGroup: !Ref LambdaLogGroups
       Runtime: python3.12
       Timeout: 15
 
   # Define the IAM role for the Lambda function
-  LambdaLogGroup:
+  LambdaLogGroups:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupClass: STANDARD
-      # LogGroupName: !Sub /aws/lambda/FTA-GetTagsbyResources-${AWS::Region}
-      LogGroupName: !Join
-        - "-"
-        - - "/aws/lambda/FTA-GetTagsbyResource"
-          - !Select [-1, !Split ["-", !Ref "AWS::StackId"]]  # Get the last part of the stack ID
+      LogGroupName: !Sub /aws/lambda/FTA-GetTagsbyResource-${AWS::Region}
       RetentionInDays: 30
 
   LambdaExecutionRole:
