--- a/CFN/GetAccountInventoryLambda.yaml
+++ b/CFN/GetAccountInventoryLambda.yaml
@@ -98,10 +98,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupClass: STANDARD
-      LogGroupName: !Join
-        - "-"
-        - - "/aws/lambda/FTA-GetAccountInventory"
-          - !Select [-1, !Split ["-", !Ref "AWS::StackId"]]
+      LogGroupName: !Sub /aws/lambda/FTA-GetAccountsInventory-${AWS::Region}
       RetentionInDays: 30
 
   # Define the IAM role for the Lambda function
